NET-6664 Specify cluster scope for MeshGateway CRD (#3236)
Specify cluster scope for MeshGateway CRD

--- a/control-plane/config/crd/bases/mesh.consul.hashicorp.com_meshgateways.yaml
+++ b/control-plane/config/crd/bases/mesh.consul.hashicorp.com_meshgateways.yaml
@@ -13,10 +13,8 @@ spec:
     kind: MeshGateway
     listKind: MeshGatewayList
     plural: meshgateways
-    shortNames:
-    - mesh-gateway
     singular: meshgateway
-  scope: Namespaced
+  scope: Cluster
   versions:
   - additionalPrinterColumns:
     - description: The sync status of the resource with Consul
